--- a/Server/WebApi/Properties/launchSettings.json
+++ b/Server/WebApi/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54605",
-      "sslPort": 44351
+      "applicationUrl": "http://localhost:57406/",
+      "sslPort": 44371
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
